# sai_player_stm32

./: .gitignore  CMakeLists.txt  gcc-arm-none-eabi.cmake
CM4/Inc/: stm32h745i_discovery.h  stm32h745i_discovery_conf.h  stm32h7xx_hal_conf.h
CM7/: stm32h745xx_flash_CM7.ld
CM7/Inc/: main.h  stm32h7xx.h
CM7/Src/: main.c  song_30.raw  song_data.c
drivers/CMSIS/Core/Include/: core_armv81mml.h  core_armv8mbl.h  core_cm0.h  core_cm4.h  core_sc300.h
drivers/CMSIS/Core_A/Include/: core_ca.h
drivers/CMSIS/DSP/DSP_Lib_TestSuite/: CMakeLists.txt
drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/: jtest_cycle.h  jtest_fw.h
drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/arr_desc/: arr_desc.h
drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/: CMakeLists.txt
drivers/CMSIS/DSP/Examples/ARM/arm_variance_example/: CMakeLists.txt
drivers/CMSIS/DSP/Include/: arm_const_structs.h
drivers/CMSIS/DSP/Source/: CMakeLists.txt
drivers/CMSIS/Include/: core_armv8mml.h  core_cm0plus.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm7.h  core_sc000.h
drivers/CMSIS/NN/NN_Lib_Tests/nn_test/Ref_Implementations/: arm_convolve_HWC_q15_ref.c  arm_convolve_HWC_q7_ref.c  arm_convolve_HWC_q7_ref_nonsquare.c  arm_depthwise_separable_conv_HWC_q7_ref.c  arm_depthwise_separable_conv_HWC_q7_ref_nonsquare.c
drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_sai.c
